[package]
name = "bioinf02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bioinf02lib"
crate-type = ["cdylib"]

[dependencies]
regex = "1"

[dependencies.cpython]
version = "0.7"
features = ["extension-module"]